<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fanplay IoT</string>
    <string name="web_client_id">699544504112-kd9suiiiri6l7ncp7k0fe4anq1fa26qh.apps.googleusercontent.com</string>
    <string name="razorpay_key">rzp_test_g8nx9Snam1mgd5</string>
    <string name="facebook_app_id">582013949413619</string>
    <string name="device_info">Device Info</string>
    <string name="find_wristband">Find Wristband</string>
    <string name="shake_to_photo">Shake To Photo</string>
    <string name="heart_BP">Heart Rate, Blood Pressure, Blood Oxygen </string>
    <string name="data_sync">Data Sync</string>
    <string name="time_setting">Time Setting</string>
    <string name="user_profile">User Profile</string>
    <string name="display_setting">Display Setting</string>
    <string name="alarm_setting">Alarm Setting</string>
    <string name="sedentary_remind">Sedentary Remind</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="don_t_specify">Don\'t wish to specify</string>
    <string name="unit">Unit</string>
    <string name="km">Kilometers</string>
    <string name="ml">Miles</string>
    <string name="select_activity">Please select a Physical Activity</string>
    <string name="target_steps">Target Steps</string>
    <string name="posture">Posture</string>
    <string name="left">Posture Left</string>
    <string name="right">Posture Right</string>
    <string name="light_pa">Light Physical Activity</string>
    <string name="moderate_pa">Moderate Physical Activity</string>
    <string name="vigorous_pa">Vigorous Physical Activity</string>
    <string name="error_sugar">Enter a valid Blood Sugar eg. 100 mg/dl</string>
    <string name="error_bp">Enter a valid Blood Pressure eg. 120/80 mmHg</string>
    <string name="error_hr">Enter a valid Heart rate eg. 60 bpm</string>
    <string name="error_steps">Enter a valid Steps</string>
    <string name="error_calories">Enter a valid Calories</string>
    <string name="error_distance">Enter a valid Distance</string>
    <string name="error_sleep">Enter a valid Sleep Hours</string>
    <string name="error_pa_hour">Enter a valid Hours for Physical Activity</string>
    <string name="error_pa_minute">Enter a valid Minutes for Physical Activity</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="min_60">60 mins</string>
    <string name="min_90">90 mins</string>
    <string name="min_120">120 mins</string>
    <string name="date_formatter">Date Format</string>
    <string name="step_enable">Step Enable</string>
    <string name="distance_enable">Distance Enable</string>
    <string name="calorie_enable">Calorie Enable</string>
    <string name="hr_enable">Heart Rate Enable</string>
    <string name="battery_enable">Battery Enable</string>
    <string name="lift_enable">Lift Enable</string>
    <string name="rotate_enable">Rotate Enable</string>
    <string name="language">Language</string>
    <string name="blood_enable">Blood Enable</string>
    <string name="only_time">Only Time</string>
    <string name="time_and_date">Time And Date</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="add">Add Alarm</string>
    <string name="ota">OTA</string>
    <string name="notify">Notify</string>
    <string name="notify_title">Fanband Notification</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="werun">WeRun</string>
    <string name="feature">Feature List</string>
    <string name="alarm_limit">Alarm count is limit 3</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="scan">Refresh</string>
    <string name="oxygen">Oxygen</string>
    <string name="vibrate">Vibrate</string>
    <string name="mute">Mute</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="work_day">Work Day</string>
    <string name="week_end">WeekEnd</string>
    <string name="only_one">Only One</string>
    <string name="every_day">Every Day</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="save_and_scan">Save QR Image and scan for Wechat</string>
    <string name="download">Download</string>
    <string name="download_firmware">Download the Firmware</string>
    <string name="newest">Latest</string>
    <string name="upgrade">Upgrade</string>
    <string name="is_ota">Download Finish! Upgrade to new Firmware?</string>
    <string name="updating">Uploading...</string>
    <string name="upload_finish">Upload Finish</string>
    <string name="sw">Switch</string>
    <string name="Phone">Phone</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="test_phone">18888888888</string>
    <string name="sms">SMS</string>
    <string name="test_sms">Test SMS</string>
    <string name="wechat">We Chat</string>
    <string name="qq">QQ</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="instagram">Instagram</string>
    <string name="line">Line</string>
    <string name="Image">Image</string>
    <string name="battery">Battery</string>
    <string name="rssi">RSSI</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="mas">mas</string>
    <string name="title_activity_login">Sign in</string>
    <string name="last_activity">Last Activity %s</string>
    <string name="spashscreen">spashscreen</string>
    <string name="login_button">LOG IN</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account ? Sign Up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_Text">LOG IN</string>
    <string name="password">Password</string>
    <string name="fplogo">fplogo</string>
    <string name="email">Mail ID</string>
    <string name="login_otp">Log in with OTP</string>
    <string name="otp_btn">Verify</string>
    <string name="mobile">Mobile</string>
    <string name="i_agree_to_privacy_policy_and_terms">I agree to Privacy Policy and Terms</string>
    <string name="linkedin">linkedin</string>
    <string name="gmail">gmail</string>
    <string name="otp">OTP Login</string>
    <string name="resent_otp">Resend OTP?</string>
    <string name="verifying_text">Verifying your number!</string>
    <string name="phone_no_sent">We have sent an OTP to your number </string>
    <string name="fb">fb</string>
    <string name="avatar">avatar</string>
    <string name="avatarImage">avatarImage</string>
    <string name="username">RAMESH</string>
    <string name="run_image">run_image</string>
    <string name="distance">Distance</string>
    <string name="rundistance">2 KM</string>
    <string name="session">Session</string>
    <string name="title_activity_tab_dashboard">TabDashboard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="Insights">Insights</string>
    <string name="Sessions">Sessions</string>
    <string name="fan_engagement_heart_count_btn">Count Heart Rate</string>
    <string name="card_swiper_title">Cheers to team and Players</string>
    <string name="a" />
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="Last">last</string>
    <string name="date_range">Choose Date range</string>
    <string name="Overview">Overview</string>
    <string name="oil_price" />
    <string name="price_in_last_12_days" />
    <string name="OK">OK</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="SETTING">SETTING</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CLOSE">CLOSE</string>
    <string name="UPDATE">UPDATE</string>
    <string name="DISMISS">DISMISS</string>
    <string name="HIDE">HIDE</string>
    <string name="RETRY">RETRY</string>
    <string name="TRY_AGAIN">TRY AGAIN</string>
    <string name="DETAILS">DETAILS</string>
    <string name="FAILED">FAILED</string>
    <string name="TYPE_SEARCH">SEARCH</string>
    <string name="NO_IMAGE">NO IMAGE</string>
    <string name="DELETE">DELETE</string>
    <string name="DISCARD">DISCARD</string>
    <string name="AGREE">AGREE</string>
    <string name="DISAGREE">DISAGREE</string>
    <string name="OPEN">OPEN</string>
    <string name="SAVE">SAVE</string>
    <string name="NEXT">NEXT</string>
    <string name="BACK">BACK</string>
    <string name="message_icon">info</string>
    <string name="content_title">FANPLAY IoT</string>
    <string name="channel_name">messages</string>
    <string name="channel_desc">FANPLAY IoT messages</string>
    <string name="vital">vital</string>
    <string name="avg_fan_metric">Avg Fan Metric</string>
    <string name="dash">00</string>
    <string name="doubledash">--</string>
    <string name="singledash">-</string>
    <string name="my_fanmetric">My FanMetric</string>
    <string name="avg_heart_beat">Avg Heart Beat</string>
    <string name="my_heart_beat">My Heart Beat</string>
    <string name="points" tools:ignore="TypographyDashes">--</string>
    <string name="points_value" tools:ignore="TypographyDashes">%s</string>
    <string name="count">count</string>
    <string name="sec_remaing">seconds remaining: %s</string>
    <string name="done">done</string>
    <string name="scanning">Scanning</string>
    <string name="syncing" tools:ignore="TypographyEllipsis">Synchronizing...</string>
    <string name="connecting" tools:ignore="TypographyEllipsis">Connecting...</string>
    <string name="band_connected" tools:ignore="TypographyEllipsis"> </string>
    <string name="read_start" tools:ignore="TypographyEllipsis"> </string>
    <string name="read_complete" tools:ignore="TypographyEllipsis">Stop HR</string>
    <string name="band_conn_failed">Band connection failed</string>
    <string name="band_ask_conn">Please check band is switched on and worn</string>
    <string name="hr_read_failed">Fan Band disconnected</string>
    <string name="camera_flash">Camera has no Flash</string>
    <string name="camera_perm">Allow access to read Heart rate from Camera</string>
    <string name="google_fit_perm">Allow access to read Heart rate from Google Fit</string>
    <string name="google_fit_novalue">Heart rate not available from Google fit</string>
    <string name="google_fit_unavailable">Please install Google fit and check again</string>
    <string name="read_storage_perm">Allow access to read phone storage</string>
    <string name="band">Search Fanband</string>
    <string name="emote">IoT Devices</string>
    <string name="enable_bluetooth">Please enable bluetooth in Settings</string>
    <string name="enable_location">Please turn on location in Settings</string>
    <string name="donate_hr">100 points needed to get a Whistle. Donate your HR now and earn points</string>
    <string name="heart_camera_modal_title">Camera</string>
    <string name="heart_modal_start">Start</string>
    <string name="heart_camera_modal_desc">Lightly place your index finger on the camera lens of your phone. Make sure the lens is fully covered. Hold until measurement is complete</string>
    <string name="connect_iot">Connect IoT</string>
    <string name="successful_msg">Successful</string>
</resources>