<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/screen_bottom_margin"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:id="@+id/heart_camera_modal_title"
        android:text="@string/heart_camera_modal_title" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/heart_camera_modal_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/heart_camera_img"
        android:src="@drawable/howtoheartratecamera2x"
        />

    <SurfaceView
        android:id="@+id/preview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="@id/heart_camera_img"
        app:layout_constraintBottom_toBottomOf="@id/heart_camera_img"
        app:layout_constraintLeft_toLeftOf="@id/heart_camera_img"
        app:layout_constraintRight_toRightOf="@id/heart_camera_img"
        android:visibility="invisible"
        app:layout_goneMarginStart="8dp"
        app:layout_goneMarginTop="8dp" />


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/preview"
        app:layout_constraintBottom_toTopOf="@id/heart_modal_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/marginTop"
        android:visibility="gone"
        app:lottie_rawRes="@raw/timer"
        android:id="@+id/animation_counter"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/preview"
        app:layout_constraintBottom_toTopOf="@id/heart_modal_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/marginTop"
        android:visibility="gone"
        android:id="@+id/heart_rate_count"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/heart_camera_modal_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:padding="@dimen/marginTop"
        app:layout_constraintTop_toBottomOf="@id/heart_camera_img"
        android:textAlignment="center"
        android:text="@string/heart_camera_modal_desc"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heart_modal_start"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginBottom="@dimen/screen_bottom_margin"
        android:paddingLeft="@dimen/marginTop"
        android:paddingRight="@dimen/marginTop"
        android:background="@drawable/blue_rounded_button"
        android:textColor="@color/textPrimary"
        android:text="@string/heart_modal_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heart_camera_modal_desc"
        />

</androidx.constraintlayout.widget.ConstraintLayout>